Verify WebGLSync objects in isSync() API.

Missed during the last change to this code. Unsuppress the associated
WebGL conformance test.

Bug: 857303
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Iefb2f90e6c440ae5eabc1bedd4171fbfe9a3dd0a
Reviewed-on: https://chromium-review.googlesource.com/1166454
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581719}
Former-commit-id: 0957c69823ea5c29c9dbb902204759f140f34015